// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`close-icon prop 1`] = `
<div class="ghb-image-preview" name="ghb-fade"><i role="button" class="ghb-icon ghb-icon-close ghb-image-preview__close-icon ghb-image-preview__close-icon--top-right">
    <!----></i>
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="ghb-image-preview__index">1 / 0</div>
</div>
`;

exports[`close-icon-position prop 1`] = `
<div class="ghb-image-preview" name="ghb-fade"><i role="button" class="ghb-icon ghb-icon-close ghb-image-preview__close-icon ghb-image-preview__close-icon--top-left">
    <!----></i>
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="ghb-image-preview__index">1 / 0</div>
</div>
`;

exports[`cover slot 1`] = `
<div class="ghb-image-preview" name="ghb-fade">
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="ghb-image-preview__index">1 / 0</div>
  <div class="ghb-image-preview__cover">Custom Cover Content</div>
</div>
`;

exports[`index slot 1`] = `
<div class="ghb-image-preview" name="ghb-fade">
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
  <div class="ghb-image-preview__index">Custom Index</div>
</div>
`;

exports[`render image 1`] = `
<div class="ghb-image-preview" name="ghb-fade">
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 300ms; transform: translateX(0px);">
      <div class="ghb-swipe-item ghb-image-preview__swipe-item"></div>
      <div class="ghb-swipe-item ghb-image-preview__swipe-item"></div>
      <div class="ghb-swipe-item ghb-image-preview__swipe-item"></div>
    </div>
  </div>
  <div class="ghb-image-preview__index">1 / 3</div>
</div>
`;

exports[`set show-index prop to false 1`] = `
<div class="ghb-image-preview" name="ghb-fade">
  <div class="ghb-swipe ghb-image-preview__swipe">
    <div class="ghb-swipe__track" style="transition-duration: 0ms; transform: translateX(0px);"></div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 1`] = `
<div class="ghb-image ghb-image-preview__image" style="transition-duration: 0s; transform: scale(2, 2) translate(0px, 0px);"><img src="https://img01.yzcdn.cn/1.png" class="ghb-image__img" style="object-fit: contain;">
  <div class="ghb-image__loading">
    <div class="ghb-loading ghb-loading--spinner"><span class="ghb-loading__spinner ghb-loading__spinner--spinner"><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i><i></i></span></div>
  </div>
</div>
`;

exports[`zoom in and drag image to move 2`] = `<div class="ghb-image ghb-image-preview__image" style="transition-duration: 0s; transform: scale(2, 2) translate(25px, 25px);"><img src="https://img01.yzcdn.cn/1.png" class="ghb-image__img" style="object-fit: contain;"></div>`;
